java/java-tests/testData/codeInsight/daemonCodeAnalyzer/lambda/interfaceMethods/ModifierNativeInInterface.java
interface A {
    default <error descr="Modifier 'native' not allowed here">native</error> void m(){}
    static <error descr="Modifier 'native' not allowed here">native</error> void m1(){}
    <error descr="Modifier 'native' not allowed here">native</error> void m2();
}